--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,9 @@ jobs:
     - name: Get latest code
       uses: actions/checkout@v2
     
+    - name: Print FTP Host for Debugging
+      run: echo "FTP Host: ${{ secrets.FTP_HOST }}"
+    
     - name: Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
