--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,18 @@ jobs:
     - name: Print FTP Host for Debugging
       run: echo "FTP Host: ${{ secrets.FTP_HOST }}"
     
+    - name: Test DNS Resolution
+      run: nslookup ${{ secrets.FTP_HOST }}
+    
+    - name: Test FTP Connectivity
+      run: |
+        echo "Open FTP connection to ${{ secrets.FTP_HOST }}"
+        # Install ftp command if not present
+        sudo apt-get update && sudo apt-get install -y ftp
+        ftp -inv ${{ secrets.FTP_HOST }} <<EOF
+        bye
+        EOF
+    
     - name: Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
