--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Test DNS Resolution
-      run: nslookup ${{ secrets.FTP_HOST }}
+      run: nslookup ${{ secrets.FTP_HOST }} 8.8.8.8
 
     - name: Test FTP Connectivity
       run: |
