--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,9 @@ jobs:
     - name: Get latest code
       uses: actions/checkout@v2
 
+    - name: Print FTP Host
+      run: echo "FTP_Host:${{ secrets.FTP_HOST }}"
+
     - name: Test DNS Resolution
       run: nslookup ${{ secrets.FTP_HOST }} 8.8.8.8
 
