--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,25 @@
-name: Deploy to Hostinger via SSH
+name: Deploy via SSH
 
 on:
   push:
     branches:
-      - main
+      - main  # Trigger deployment on push to the main branch
 
 jobs:
   deploy:
-    name: Deploy via SSH
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout Code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2  # Pulls the latest code from the repository
 
-    - name: Deploy to Hostinger via SSH
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan -H "${{ secrets.HOSTINGER_HOST }}" >> ~/.ssh/known_hosts
-        rsync -avz --delete ./ public_html/ \
-          -e "ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa" \
-          ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }}:~/public_html/
+    - name: Deploy via SSH
+      uses: appleboy/ssh-action@v0.1.5
+      with:
+        host: <145.223.89.134>
+        username: <u221328250>
+        key: ${{ secrets.SSH_PRIVATE_KEY }}  # Reference to your private SSH key stored in GitHub Secrets
+        port: 65002  # Default SSH port; change if your server uses a custom port
+        script: |
+          cd //home/u221328250/domains/simplebreathwork.com/public_html  # Navigate to the directory on the server
+          git pull origin main      # Pull the latest changes from the main branch
