--- a/.htaccess
+++ b/.htaccess
@@ -72,7 +72,9 @@ RewriteEngine On
             https://*.googlesyndication.com \
             https://*.google-analytics.com \
             https://partner.googleadservices.com \
-            https://*.doubleclick.net; \
+            https://pagead2.googlesyndication.com \
+            https://*.doubleclick.net \
+            'unsafe-eval'; \
         style-src 'self' 'unsafe-inline' \
             https://fonts.googleapis.com \
             https://*.google.com; \
@@ -94,12 +96,14 @@ RewriteEngine On
         frame-src 'self' \
             https://*.google.com \
             https://*.doubleclick.net \
+            https://googleads.g.doubleclick.net \
             https://*.googlesyndication.com; \
         object-src 'none'; \
         base-uri 'self'; \
         form-action 'self'; \
         frame-ancestors 'none'; \
-        upgrade-insecure-requests;" </IfModule>
+        upgrade-insecure-requests;"
+</IfModule>
 
 # ==============================================================================
 # SECURITY
